bugfixing voor overflow website

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,10 +5,10 @@
 
 html {
     font-size: 62.5%;
+    overflow-y: hidden;
 }
 
 body {
-    overflow: hidden;
     font-family: 'Outfit', sans-serif;
 }
 
@@ -36,8 +36,8 @@ body {
 
 .menu_bottom {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 0%;
+    left: 0%;
     width: 100%;
     height: 10rem;
     display: flex;
